Updated index.html with new content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    hello i am aditya
+    hello i am aditya singh
+    <br>
+    i am a college student at ait pune
 </body>
 </html>
